--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.544.0",
-    "html-to-image": "https://aistudiocdn.com/html-to-image@^1.11.11"
+    "html-to-image": "https://aistudiocdn.com/html-to-image@^1.11.11",
+    "firebase/app": "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js",
+    "firebase/storage": "https://www.gstatic.com/firebasejs/11.0.2/firebase-storage.js",
+    "firebase/analytics": "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
   }
 }
 </script>
